# Sieci_produkcyjne

./: .gitignore  CMakeLists.txt  bledy.txt  group_info__5.txt  network_exec.cpp  readme.txt  struct-input.txt
include/: factory.hpp  global_functions_mock.hpp  helpers.hpp  network.hpp  nodes.hpp  package.hpp  reports.hpp  simulation.hpp  storage_types.hpp  types.hpp
src/: factory.cpp  helpers.cpp  network.cpp  nodes.cpp  package.cpp  reports.cpp  simulation.cpp  storage_types.cpp
test/: test_Factory.cpp  test_network.cpp  test_nodes.cpp  test_random.cpp  test_reports.cpp
